--- a/ReadMe
+++ b/ReadMe
@@ -1,14 +1,14 @@
-# YatriMitra
+YatriMitra
 
-**YatriMitra** is an AI-powered travel assistant web application built to enhance the way people plan and experience travel in India. It provides users with a conversational interface to receive personalized travel guidance, destination discovery, accommodation and food suggestions, and general travel support.
+YatriMitra is an AI-powered travel assistant web application built to enhance the way people plan and experience travel in India. It provides users with a conversational interface to receive personalized travel guidance, destination discovery, accommodation and food suggestions, and general travel support.
 
 The project aims to reduce the complexity of trip planning by offering relevant, timely, and location-aware recommendations through an intuitive chatbot system.
 
-## Why YatriMitra?
+Why YatriMitra?
 
 Planning trips can be overwhelming—especially in a country as diverse and vast as India. YatriMitra simplifies this process by acting as a digital travel companion. It eliminates the need to jump between multiple websites or apps by answering user queries directly and contextually, saving both time and effort.
 
-## What You Can Do With YatriMitra
+What You Can Do With YatriMitra
 
 - Chat with the assistant to get personalized travel suggestions
 - Discover tourist attractions in any Indian city
